# Typst-OCR

./: .gitignore  README.md  dataset.ipynb  mixtex-train.ipynb  pyproject.toml  tokenizer_vocab.txt  train.ipynb  train.py  train2.ipynb
src/typst_ocr/: __init__.py
