[project]
name = "typst-ocr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hzy", email = "1448424184@qq.com" }
]
dependencies = [
    "pyarrow==12.0.1",
    "requests>=2.32.5",
    "pillow>=12.0.0",
    "datasets>=2.18.0",
    "accelerate>=1.12.0",
    "transformers>=4.57.3",
    "torch>=2.2.2",
    "numpy==1.26.0",
    "ipykernel>=7.1.0",
    "python-lsp-server>=1.13.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/typst_ocr"]
